# brrc-paper

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt
data/processed/: delta_genomes.fasta  domain_A_alignment.fasta  obelisk_alpha_subfamily_msa.sto  obelisk_candidates.fasta  obelisk_omega_subfamily_msa.sto  oblin1_msa.fasta  oblin1_msa.sto  oblin1_zheludev_catalog.fasta
data/raw/: bacterial_brrc_window_sample.fasta  blast_obelisks_vs_nt.xml  delta_full_genomes.fasta  obelisk_Sss_reference.fasta  obelisk_candidates_ncbi.fasta  rfam_controls.fasta  rfam_controls_expanded.fasta
oblin/: __main__.py  analyses.py  checks.py  cli.py  core.py  figures.py
results/af3/: fold_2026_05_14_08_22_full_data_0.json  fold_2026_05_14_08_22_job_request.json  fold_2026_05_14_08_22_model_0.cif  fold_2026_05_14_08_22_summary_confidences_0.json  terms_of_use.tex
results/boltz/: oblin1_confidence.json  pae_oblin1_model_0.npz  plddt_oblin1_model_0.npz
results/json/: bacterial_controls.json  bootstrap_cis.json  brrc_envelope_summary.json  brrc_pass_discriminators.json  catalog_features.json  circular.json  classifier_nested_cv.json  classifier_permutation_test.json  cluster_level_bootstrap.json  codon_position.json  codon_usage.json  continuous_brrc_auc.json  cotrans.json  covariation_summary.json  crispr_spacer_hits.json  dedup_strictness_brrc_sensitivity.json  dinuc_shuffle_10x.json  dinuc_step.json  enrichment_ci.json  ensemble_averaged_brrc.json  ensemble_brrc.json  ensemble_pp_stratified.json  frame_shift.json  helix.json  (+48 more)
(+32 files in other folders)
